refact: refactoring folders and files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movietranslactions-api",
+  "name": "movietranslations-api",
   "version": "0.0.1",
   "description": "MovieTranslactions API",
   "scripts": {
