chore: test adjustments

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "postgres:start": "docker run -d -p 5430:5432 --name postgres -e POSTGRES_HOST_AUTH_METHOD=trust postgres:11-alpine",
     "database:create": "docker exec postgres psql -U postgres postgres -c \"CREATE DATABASE $(grep DB_DATABASE .env | cut -d= -f 2)\"",
     "typecheck": "npx tsc -noEmit",
-    "test": "jest -w9 --detectOpenHandles"
+    "test": "jest -w9 --detectOpenHandles --setupFiles dotenv/config"
   },
   "dependencies": {
     "@sentry/node": "^5.15.5",
